<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteDark"
    tools:context=".SearchActivity">

    <ImageView
        android:id="@+id/search_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_back"
        android:tint="@color/black"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:fontFamily="@font/krungthep"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"/>

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:queryHint="Search anything"
        android:layout_below="@+id/title"
        android:background="@color/white"
        android:elevation="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        android:layout_marginTop="48dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_weight="2"
                android:background="@color/whiteDark"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_people"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_search"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_search_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_search"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_search_text"
                    android:layout_marginStart="14dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_weight="2"
                android:background="@color/whiteDark"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_game_controller"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>